[tool.poetry]
name = "python 3-11-1"
version = "0.1.0"
description = "Python"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python 3"}]

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.43"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
